# 05-chat

./: .env  Cargo.toml  LICENSE  denybak1.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: encoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: decoding.pem
chat_server/src/: config.rs  error.rs  lib.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  chat.yml
migrations/: 20240817014852_initial.sql  20240824013329_workspace.sql
notify_server/: Cargo.toml
notify_server/src/: main.rs  sse.rs
