[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
jwt-simple = "0.12.9"
mime_guess = "2.0.5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror.workspace = true
tokio = { workspace = true }
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "compression-deflate", "trace", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.10.0", features = ["v7", "serde"] }

[dev-dependencies]
http-body-util = "0.1.1"
sqlx-db-tester = "0.4.0"
