[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
hex = "0.4.3"
mime_guess = "2.0.5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true,  features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror.workspace = true
jwt-simple = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chat-core = {workspace = true }
http-body-util = { version = "0.1.1", optional = true }
sqlx-db-tester = { version = "0.4.0", optional = true }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }

[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
