[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3.30"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chat-core = {workspace = true }
jwt-simple = { workspace = true }
dashmap = "6.0.1"
serde_json = "1.0.127"
